tests/cases/compiler-development/artifact/errors/diagnostic-missing-module.diagnostic
diagnostic error code=M0001 family=module message="cannot find module file for 'missing_artifact_module'; searched tests/cases/compiler-development/artifact/errors/missing_artifact_module.ari, tests/cases/compiler-development/artifact/errors/missing_artifact_module.arih, tests/cases/compiler-development/artifact/errors/missing_artifact_module/mod.ari, tests/cases/compiler-development/artifact/errors/missing_artifact_module/mod.arih" sources=1 labels=1 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-missing-module.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-missing-module.ari" bytes=63
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-missing-module.ari" line=1 column=5 end_line=1 end_column=28 byte_start=4 byte_end=27 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-missing-module.ari:1:5\n   |\n 1 | mod missing_artifact_module;\n   |     ^^^^^^^^^^^^^^^^^^^^^^^"
  Note index=0 location=none message="module search paths are tried in deterministic order"
  Help index=0 location=none message="pass -I path or --module-path path for file-backed modules"
